[tool.poetry]
name = "src"
version = "0.3.18"
description = "social-media-suite"
authors = ["Evan <evaanngc@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = ">=0.3.35,<0.4.0"
langgraph = ">=0.2.72,<0.3.0"
streamlit = "^1.28.0"
pandas = "^2.0.0"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
langchain-google-genai = ">=0.0.11"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
plotly = "^5.18.0"
langchain-openai = ">=0.3.5,<0.4.0"
python-dotenv = "^1.0.1"
langchain = ">=0.3.18,<0.4.0"
pydantic = ">=2.10.6,<3.0.0"
langchain-community = ">=0.3.17,<0.4.0"
watchfiles = ">=0.13.0"
cryptography = ">=43.0.3,<44.0.0"
duckdb = "^1.2.1"
fastapi = "^0.115.12"
redis = "^5.2.1"
celery = "^5.4.0"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"