[tool.poetry]
name = "AIPost"
version = "0.3.18"
description = "social-media-suite"
authors = ["Evan <evaanngc@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.54.0"
pandas = "^2.3.3"
requests = "^2.32.5"
requests-oauthlib = "^1.3.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
plotly = "^5.24.1"
python-dotenv = "^1.2.1"
pydantic = "^2.12.5"
watchfiles = "^1.1.1"
cryptography = ">=43.0.3,<44.0.0"
duckdb = "^1.4.4"
fastapi = "^0.115.14"
redis = "^5.3.1"
celery = "^5.6.2"
python-multipart = "^0.0.20"
itsdangerous = "^2.2.0"
supabase = "^2.28.0"
postgrest = "^2.28.0"
streamlit-cookies-manager = "^0.2.0"
extra-streamlit-components = "^0.1.81"
streamlit-cookies-controller = "^0.0.4"
langgraph = "^1.0.9"
langchain = "^1.2.10"
langchain-tavily = "^0.2.17"
langgraph-checkpoint-sqlite = "^2.0.11"
beautifulsoup4 = "^4.14.3"
tavily-python = "^0.7.21"
watchdog = "^6.0.0"
langchain-google-genai = "^4.2.1"
langchain-community = "^0.4.1"
langmem = "^0.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"